wip: pass --enable-native-access to kuilt-mdns test JVMs